[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luxorliving-baos"
version = "0.0.1"
description = "Weinzierl BAOS 777 REST API client for Python. Async/await support with circuit breaker resilience."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Philipp Schmidt", email = "philippdschmidt@outlook.com"}]
keywords = ["baos", "knx", "rest-api", "async", "luxorliving", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "black==26.5.1",
    "isort==7.0.0",
    "flake8==7.3.0",
    "flake8-docstrings==1.7.0",
    "pylint==4.0.5",
    "mypy==2.1.0",
    "bandit==1.9.4",
    "pre-commit==4.6.0",
]

[project.urls]
Homepage = "https://github.com/phismith91/luxorliving-baos"
Documentation = "https://github.com/phismith91/luxorliving-baos#readme"
Repository = "https://github.com/phismith91/luxorliving-baos.git"
Issues = "https://github.com/phismith91/luxorliving-baos/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: async tests",
    "slow: slow tests",
    "integration: integration tests",
]
addopts = "--cov=src/luxorliving_baos --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
branch = true
source = ["src/luxorliving_baos"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
]
ignore_missing_imports = true

[tool.pylint.main]
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
]
load-plugins = []

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used
